Touchstart during fling sent to renderer but not to main thread.

Always handling touchstart as non-blocking during a touchscreen fling
causes the following regression:
If there are two scrollable divs one with touch-action: pan-x and
the second one with touch-action: pan-y, flinging horizontally on the
second one while the first one is flinging horizontally boosts the fling
on the first one rather than stopping it.

In this cl the touchstart is handled non blocking during a fling only
if it's touching the scrolling layer.

Bug: 828436
Test: CompositorEventAckBrowserTest.TouchStartDuringFling
Change-Id: If391b962b3be15955f77b38b577444f8fa3f76be
Reviewed-on: https://chromium-review.googlesource.com/998872
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548888}
Former-commit-id: d408c9d53637e378bf4adc4c619fd7b47078a4b6