ui/events/blink/input_handler_proxy.h
@@ -223,6 +223,7 @@ class InputHandlerProxy : public cc::InputHandlerClient,
 #endif
   bool gesture_scroll_on_impl_thread_;
   bool gesture_pinch_on_impl_thread_;
+  bool in_inertial_scrolling_ = false;
   bool scroll_sequence_ignored_;
   // This is always false when there are no flings on the main thread, but
   // conservative in the sense that we might not be actually flinging when it is
